--- a/index.html
+++ b/index.html
@@ -36,5 +36,36 @@
         </div>
       </nav>
     </header>
+
+    <main class="page-main">
+
+      <section class="stats">
+        <header class="stats__header">
+          <h2 class="visually-hidden">Статистика барбершопа</h2>
+          <b class="stats__slogan">Стрижка у нас это выгодно!</b>
+          <p class="stats__intro">Мужская стрижка требует точного подхода. Обратимся к статистике:</p>
+          <small class="stats__legend stats__legend--top"><sup>*</sup> — приведённые данные ложь</small>
+        </header>
+        <table class="stats__list">
+          <tr>
+            <td class="stats__value">1 500 *</td>
+            <td class="stats__description">рублей вложений</td>
+          </tr>
+          <tr>
+            <td class="stats__value">7 200</td>
+            <td class="stats__description">секунд времени мастера</td>
+          </tr>
+          <tr>
+            <td class="stats__value">90 000</td>
+            <td class="stats__description">постриженных волос</td>
+          </tr>
+          <tr>
+            <td class="stats__value">500 000 *</td>
+            <td class="stats__description">лайков и комплиментов</td>
+          </tr>
+        </table>
+        <small class="stats__legend stats__legend--bottom"><sup>*</sup> — приведённые данные ложь</small>
+      </section>
+    </main>
   </body>
 </html>
