--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
         </table>
         <small class="stats__legend stats__legend--bottom"><sup>*</sup> — приведённые данные ложь</small>
       </section>
+
+      <section class="advantages">
+        <div class="advantages__wrapper slider">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <ul class="advantages__list slider__list">
+            <li class="advantages__item advantages__item--fast">
+              <b class="advantages__name">Быстро</b>
+              <p class="advantages__description">Мы делаем свою работу быстро! Два часа пролетят незаметно и вы — счастливый обладатель стильной стрижки-минутки</p>
+            </li>
+            <li class="advantages__item advantages__item--cool">
+              <b class="advantages__name">Круто</b>
+              <p class="advantages__description">Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино. Во всяком случае внешне.</p>
+            </li>
+            <li class="advantages__item advantages__item--expensive">
+              <b class="advantages__name">Дорого</b>
+              <p class="advantages__description">Наши мастера — профессионалы своего делаи не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
+            </li>
+          </ul>
+          <p class="advantages__toggles slider__toggles">
+            <button class="slider__toggle" type="button">1</button>
+            <button class="slider__toggle" type="button">2</button>
+            <button class="slider__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
