--- a/index.html
+++ b/index.html
@@ -110,6 +110,41 @@
         </ul>
         <a class="news-all__toggle" href="#">Показать все</a>
       </section>
+
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__headline">Отзывы о нас</h2>
+          <div class="reviews__list slider__list">
+            <blockquote class="slider__item">
+              <p class="reviews__author-photo">
+                <img src="" alt="">
+              </p>
+              <b class="reviews__author-name">Трэвис Баркер</b>
+              <p class="reviews__author-text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
+            </blockquote>
+            <blockquote class="slider__item">
+              <p class="reviews__author-photo">
+                <img src="" alt="">
+              </p>
+              <b class="reviews__author-name">Джон Смит</b>
+              <p class="reviews__author-text">Отличную стрижку мне сделали ребята.</p>
+            </blockquote>
+            <blockquote class="slider__item">
+              <p class="reviews__author-photo">
+                <img src="" alt="">
+              </p>
+              <b class="reviews__author-name">Иван Бородайло</b>
+              <p class="reviews__author-text">В Бородинском ваша борода в надёжных руках!</p>
+            </blockquote>
+            <p class="reviews__toggles slider__toggles">
+              <button class="slider__toggle" type="button">1</button>
+              <button class="slider__toggle" type="button">2</button>
+              <button class="slider__toggle" type="button">3</button>
+            </p>
+          </div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
