добавил альтернативный текст картинкам

--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
           <div class="reviews__list slider__list">
             <blockquote class="slider__item">
               <p class="reviews__author-photo">
-                <img src="" alt="">
+                <img src="" alt="Трэвис Баркер">
               </p>
               <b class="reviews__author-name">Трэвис Баркер</b>
               <p class="reviews__author-text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
             <blockquote class="slider__item">
               <p class="reviews__author-photo">
-                <img src="" alt="">
+                <img src="" alt="Джон Смит">
               </p>
               <b class="reviews__author-name">Джон Смит</b>
               <p class="reviews__author-text">Отличную стрижку мне сделали ребята.</p>
             </blockquote>
             <blockquote class="slider__item">
               <p class="reviews__author-photo">
-                <img src="" alt="">
+                <img src="" alt="Иван Бородайло">
               </p>
               <b class="reviews__author-name">Иван Бородайло</b>
               <p class="reviews__author-text">В Бородинском ваша борода в надёжных руках!</p>
