разметил блок работ

--- a/photo.html
+++ b/photo.html
@@ -36,6 +36,53 @@
         </div>
       </nav>
     </header>
+
+    <main class="page-main">
+
+      <section class="works">
+        <div class="works__wrapper">
+          <h2 class="works__headline">Наши работы</h2>
+          <ul class="works__list">
+            <li class="works__item">
+              <img class="works__photo" src="" alt="Лжепётр">
+              <b class="works__name">Лжепётр Мчиславский</b>
+              <p class="works__text">Где я только не стригся, но так как делаете это вы — не умеет никто другой! Еще раз спасибо и до скорого!</p>
+              <ul class="works__services">
+                <li class="works__service works__service--haircut">Стрижка</li>
+                <li class="works__service works__service--shaving">Бритье</li>
+                <li class="works__service works__service--mustache">Усы</li>
+              </ul>
+            </li>
+            <li class="works__item">
+              <img class="works__photo" src="" alt="Саша">
+              <b class="works__name">Саша Мальцев</b>
+              <p class="works__text">Попросил омолодить и омолодили! Кто теперь скажет, что мне 45? </p>
+              <ul class="works__services">
+                <li class="works__service works__service--haircut">Стрижка</li>
+              </ul>
+            </li>
+            <li class="works__item">
+              <img class="works__photo" src="" alt="Владимир">
+              <b class="works__name">Владимир Иваныч</b>
+              <p class="works__text">К зимнему сезону — готов!</p>
+              <ul class="works__services">
+                <li class="works__service works__service--shaving">Борода</li>
+                <li class="works__service works__service--mustache">Усы</li>
+              </ul>
+            </li>
+            <li class="works__item">
+              <img class="works__photo" src="" alt="Винстон">
+              <b class="works__name">Винстон Синий</b>
+              <p class="works__text">Как только заростаю и волосы начинают мешать видеть — бегом в Бородинский!</p>
+              <ul class="works__services">
+                <li class="works__service works__service--haircut">Стрижка</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="price-list">
     </main>
   </body>
 </html>
