разметил блок прейскуранта

--- a/photo.html
+++ b/photo.html
@@ -83,6 +83,51 @@
       </section>
 
       <section class="price-list">
+        <div class="price-list__wrapper ">
+          <h2 class="price-list__headline">Прейскурант</h2>
+          <table class="price-list__items">
+            <tr>
+              <td class="price-list__option">
+                <b class="price-list__haircut">Классическая стрижка</b>
+                (с мытьём головы)
+              </td>
+              <td class="price-list__cost">1 500 руб.</td>
+            </tr>
+            <tr>
+              <td class="price-list__option">
+                <b class="price-list__haircut">Современный вариант</b>
+                (с мытьём головы)
+              </td>
+              <td class="price-list__cost">1 500 руб.</td>
+            </tr>
+            <tr>
+              <td class="price-list__option">
+                <b class="price-list__haircut">Индивидуальный подход</b>
+                (с мытьём головы)
+              </td>
+              <td class="price-list__cost">2 000 руб.</td>
+            </tr>
+            <tr>
+              <td class="price-list__option">
+                <b class="price-list__haircut">Бритьё головы</b>
+                (без мытья)
+              </td>
+              <td class="price-list__cost">500 руб.</td>
+            </tr>
+            <tr>
+              <td class="price-list__option">
+                <b class="price-list__haircut">Бритьё головы</b>
+                (с мытьём головы)
+              </td>
+              <td class="price-list__cost">1 000 руб.</td>
+            </tr>
+          </table>
+          <div class="price-list__discount">
+            <p class="price-list__discount-time">C 10:00 до 14:00 скидка 20%</p>
+          </div>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
