добавил ссылки на страницы

--- a/source/photo.html
+++ b/source/photo.html
@@ -13,13 +13,13 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Главная</a>
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link main-navigation__link--active" href="#">Наши работы</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Записаться</a>
+              <a class="main-navigation__link" href="form.html">Записаться</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="#">Контакты</a>
