--- a/source/form.html
+++ b/source/form.html
@@ -13,10 +13,10 @@
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Главная</a>
+              <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Наши работы</a>
+              <a class="main-navigation__link" href="photo.html">Наши работы</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link main-navigation__link--active" href="#">Записаться</a>
