--- a/source/index.html
+++ b/source/index.html
@@ -17,10 +17,10 @@
               <a class="main-navigation__link main-navigation__link--active" href="#">Главная</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Наши работы</a>
+              <a class="main-navigation__link" href="photo.html">Наши работы</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Записаться</a>
+              <a class="main-navigation__link" href="form.html">Записаться</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="#">Контакты</a>
