--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     <title>Запись на стрижку</title>
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
 
