--- a/source/form.html
+++ b/source/form.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
     <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     <title>Запись на стрижку</title>
     <link rel="stylesheet" href="css/style.min.css">
@@ -58,27 +57,27 @@
               <ul class="record__radio-buttons">
                 <li class="record__beard-model">
                   <input type="radio" name="beard-model" id="admiral" value="admiral" checked>
-                  <label for="admiral">адмирал</label>
+                  <label class="record__radio" for="admiral">адмирал</label>
                   <img src="" alt="адмирал">
                 </li>
                 <li class="record__beard-model">
                   <input type="radio" name="beard-model" id="lumberjack" value="lumberjack">
-                  <label for="lumberjack">лесоруб</label>
+                  <label class="record__radio" for="lumberjack">лесоруб</label>
                   <img src="" alt="лесоруб">
                 </li>
                 <li class="record__beard-model">
                   <input type="radio" name="beard-model" id="polar" value="polar">
-                  <label for="polar">полярник</label>
+                  <label class="record__radio" for="polar">полярник</label>
                   <img src="" alt="полярник">
                 </li>
                 <li class="record__beard-model">
                   <input type="radio" name="beard-model" id="boyar" value="boyar">
-                  <label for="boyar">боярин</label>
+                  <label class="record__radio" for="boyar">боярин</label>
                   <img src="" alt="боярин">
                 </li>
                 <li class="record__beard-model">
                   <input type="radio" name="beard-model" id="sage" value="sage">
-                  <label for="sage">мудрец</label>
+                  <label class="record__radio" for="sage">мудрец</label>
                   <img src="" alt="мудрец">
                 </li>
               </ul>
