--- a/source/photo.html
+++ b/source/photo.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
     <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
     <title>Наши работы</title>
     <link rel="stylesheet" href="css/style.min.css">
@@ -11,7 +10,7 @@
     <header class="page-header">
       <img class="page-header__logo" src="" alt="Логотип" width="226" height="30">
       <nav class="main-navigation">
-        <button class="main-navigation__button" type="button">Открыть меню</button>
+        <button class="main-navigation__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
