--- a/source/photo.html
+++ b/source/photo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Наши работы</title>
     <link rel="stylesheet" href="css/style.min.css">
   </head>
@@ -43,6 +44,7 @@
       <section class="works">
         <div class="works__wrapper">
           <h2 class="works__headline">Наши работы</h2>
+          <a class="works-to-main__toggle" href="#">На главную</a>
           <ul class="works__list">
             <li class="works__item">
               <img class="works__photo" src="" alt="Лжепётр">
