--- a/source/index.html
+++ b/source/index.html
@@ -9,12 +9,18 @@
   <body>
 
     <header class="page-header">
-      <img class="page-header__logo" src="" alt="Логотип" width="226" height="30">
-      <nav class="main-navigation">
+      <div class="page-header__logo">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logotype-tablet.svg">
+          <img src="img/logotype-mobile.svg" alt="Логотип" width="370" height="153">
+        </picture>
+      </div>
+      <nav class="main-navigation main-navigation--closed">
         <button class="main-navigation__button" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
-            <li class="main-navigation__item">
+            <li class="main-navigation__item main-navigation__item--active">
               <a class="main-navigation__link main-navigation__link--active" href="#">Главная</a>
             </li>
             <li class="main-navigation__item">
