--- a/source/index.html
+++ b/source/index.html
@@ -78,6 +78,9 @@
       <section class="advantages">
         <div class="advantages__wrapper slider">
           <h2 class="visually-hidden">Наши преимущества</h2>
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-1" checked>
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-2">
+          <input class="slider__input" type="radio" name="advantages" id="advantages-input-3">
           <ul class="advantages__list slider__list">
             <li class="advantages__item advantages__item--fast">
               <b class="advantages__name">Быстро</b>
@@ -92,11 +95,11 @@
               <p class="advantages__description">Наши мастера — профессионалы своего делаи не могут стоить дёшево. К тому же, разве цена не даёт определённый статус?</p>
             </li>
           </ul>
-          <p class="advantages__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
+          <div class="advantages__toggles slider__toggles">
+            <label class="slider__toggle" for="advantages-input-1">1</label>
+            <label class="slider__toggle" for="advantages-input-2">2</label>
+            <label class="slider__toggle" for="advantages-input-3">3</label>
+          </div>
         </div>
       </section>
 
@@ -123,22 +126,25 @@
         <div class="reviews__wrapper slider">
           <h2 class="reviews__headline">Отзывы о нас</h2>
           <a class="reviews-comment__toggle" href="#">Оставить свой</a>
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-1" checked>
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-2">
+          <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
           <div class="reviews__list slider__list">
-            <blockquote class="slider__item">
+            <blockquote class="reviews__item">
               <p class="reviews__author-photo">
                 <img src="" alt="Трэвис Баркер">
               </p>
               <b class="reviews__author-name">Трэвис Баркер</b>
               <p class="reviews__author-text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
-            <blockquote class="slider__item">
+            <blockquote class="reviews__item">
               <p class="reviews__author-photo">
                 <img src="" alt="Джон Смит">
               </p>
               <b class="reviews__author-name">Джон Смит</b>
               <p class="reviews__author-text">Отличную стрижку мне сделали ребята.</p>
             </blockquote>
-            <blockquote class="slider__item">
+            <blockquote class="reviews__item">
               <p class="reviews__author-photo">
                 <img src="" alt="Иван Бородайло">
               </p>
@@ -147,11 +153,11 @@
             </blockquote>
             <button class="reviews__prev" type="button"></button>
             <button class="reviews__next" type="button"></button>
-            <p class="reviews__toggles slider__toggles">
-              <button class="slider__toggle" type="button">1</button>
-              <button class="slider__toggle" type="button">2</button>
-              <button class="slider__toggle" type="button">3</button>
-            </p>
+          </div>
+          <div class="reviews__toggles slider__toggles">
+            <label class="slider__toggle" for="reviews-input-1">1</label>
+            <label class="slider__toggle" for="reviews-input-2">2</label>
+            <label class="slider__toggle" for="reviews-input-3">3</label>
           </div>
         </div>
       </section>
