--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
               <a class="main-navigation__link" href="photo.html">Наши работы</a>
             </li>
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link main-navigation__link--active" href="form.html">Записаться</a>
+              <a class="main-navigation__link main-navigation__link--active" href="#">Записаться</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="#">Контакты</a>
@@ -120,6 +120,7 @@
             </p>
           </div>
           <div class="page-footer__social social">
+            <span class="page-footer__social-title">Давайте дружить!</span>
             <ul class="social__list">
               <li class="social__item social__item--vkontakte">
                 <a class="social__link" href="#">Мы в вконтакте</a>
@@ -134,7 +135,7 @@
           </div>
           <div class="page-footer__copyright copyright">
             <span class="copyright__text">Разработано:</span>
-            <a class="button copyright__link" href="#">Html academy</a>
+            <a class="copyright__link" href="#">Html academy</a>
           </div>
         </div>
       </footer>
