--- a/source/index.html
+++ b/source/index.html
@@ -133,15 +133,15 @@
       <section class="reviews">
         <div class="reviews__wrapper slider">
           <h2 class="reviews__headline">Отзывы о нас</h2>
-          <a class="reviews-comment__toggle" href="#">Оставить свой</a>
+          <a class="reviews-comment__toggle button" href="#">Оставить свой</a>
           <input class="slider__input" type="radio" name="reviews" id="reviews-input-1" checked>
           <input class="slider__input" type="radio" name="reviews" id="reviews-input-2">
           <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
           <div class="reviews__list slider__list">
             <blockquote class="reviews__item">
-              <p class="reviews__author-photo">
-                <img src="" alt="Трэвис Баркер">
-              </p>
+              <div class="reviews__author-photo">
+                <img src="img/travis.jpg" alt="Трэвис Баркер">
+              </div>
               <b class="reviews__author-name">Трэвис Баркер</b>
               <p class="reviews__author-text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
@@ -196,7 +196,7 @@
           </div>
           <div class="page-footer__copyright copyright">
             <span class="copyright__text">Разработано:</span>
-            <a class="button copyright__link" href="#">Html academy</a>
+            <a class="copyright__link" href="#">Html academy</a>
           </div>
         </div>
       </footer>
