--- a/source/photo.html
+++ b/source/photo.html
@@ -24,7 +24,7 @@
               <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item main-navigation__item--active">
-              <a class="main-navigation__link main-navigation__link--active" href="photo.html">Наши работы</a>
+              <a class="main-navigation__link main-navigation__link--active" href="#">Наши работы</a>
             </li>
             <li class="main-navigation__item">
               <a class="main-navigation__link" href="form.html">Записаться</a>
@@ -143,6 +143,7 @@
             </p>
           </div>
           <div class="page-footer__social social">
+            <span class="page-footer__social-title">Давайте дружить!</span>
             <ul class="social__list">
               <li class="social__item social__item--vkontakte">
                 <a class="social__link" href="#">Мы в вконтакте</a>
@@ -157,7 +158,7 @@
           </div>
           <div class="page-footer__copyright copyright">
             <span class="copyright__text">Разработано:</span>
-            <a class="button copyright__link" href="#">Html academy</a>
+            <a class="copyright__link" href="#">Html academy</a>
           </div>
         </div>
       </footer>
