добавил ссылки на HTML академию

--- a/source/form.html
+++ b/source/form.html
@@ -33,7 +33,7 @@
               <a class="main-navigation__link" href="#">Контакты</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Html academy</a>
+              <a class="main-navigation__link" href="https://htmlacademy.ru">Html academy</a>
             </li>
           </ul>
           <ul class="user-navigation__list">
@@ -154,7 +154,7 @@
           </div>
           <div class="page-footer__copyright copyright">
             <span class="copyright__text">Разработано:</span>
-            <a class="copyright__link" href="#">Html academy</a>
+            <a class="copyright__link" href="https://htmlacademy.ru">Html academy</a>
           </div>
         </div>
       </footer>
