--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
               <a class="main-navigation__link" href="#">Контакты</a>
             </li>
             <li class="main-navigation__item">
-              <a class="main-navigation__link" href="https://htmlacademy.ru">Html academy</a>
+              <a class="main-navigation__link" href="https://htmlacademy.ru" target="_blank">Html academy</a>
             </li>
           </ul>
           <ul class="user-navigation__list">
@@ -196,7 +196,7 @@
           </div>
           <div class="page-footer__copyright copyright">
             <span class="copyright__text">Разработано:</span>
-            <a class="copyright__link" href="https://htmlacademy.ru">Html academy</a>
+            <a class="copyright__link" href="https://htmlacademy.ru" target="_blank">Html academy</a>
           </div>
         </div>
       </footer>
