--- a/source/form.html
+++ b/source/form.html
@@ -179,5 +179,13 @@
         </div>
       </section>
 
+      <section class="modal-success">
+        <div class="modal-success__wrapper">
+          <h2 class="modal-success__headline">Это успех!</h2>
+          <p class="modal-success__description">Ваша заявка отправлена. <br> Ожидайте, мы свяжемся с вами как только будет минутка.</p>
+          <button class="modal-success__toggle" type="button">Закрыть окно</button>
+        </div>
+      </section>
+
   </body>
 </html>
