--- a/source/form.html
+++ b/source/form.html
@@ -179,6 +179,14 @@
         </div>
       </section>
 
+      <section class="modal-failure">
+        <div class="modal-failure__wrapper">
+          <h2 class="modal-failure__headline">Неудача</h2>
+          <p class="modal-failure__description">Что-то пошло не так. <br> Проверьте выделенные красным поля формы.</p>
+          <button class="modal-failure__toggle" type="button">Ок</button>
+        </div>
+      </section>
+
       <section class="modal-success">
         <div class="modal-success__wrapper">
           <h2 class="modal-success__headline">Это успех!</h2>
