--- a/source/index.html
+++ b/source/index.html
@@ -221,5 +221,9 @@
         </div>
       </section>
 
+      <script type="text/javascript" src="js/script.min.js">
+
+      </script>
+
   </body>
 </html>
